[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/Start.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]

[node name="Start" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -27.0
margin_right = 50.0
margin_bottom = 27.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Buttons"]
margin_right = 100.0
margin_bottom = 78.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 95.0
margin_bottom = 73.0

[node name="StartButton" type="Button" parent="Buttons/MarginContainer/VBoxContainer"]
margin_right = 90.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetButton" type="Button" parent="Buttons/MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 90.0
margin_bottom = 44.0
size_flags_horizontal = 3
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="Buttons/MarginContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 90.0
margin_bottom = 68.0
size_flags_horizontal = 3
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Buttons/MarginContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Buttons/MarginContainer/VBoxContainer/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="pressed" from="Buttons/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
